--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.7"
   }
 }
